--- a/web-app/src/main/resources/templates/administration.html
+++ b/web-app/src/main/resources/templates/administration.html
@@ -83,7 +83,7 @@
                 Налаштування
             </a></li>
             <li id="nav-administration"><a class="selected-nav" href="/administration">
-                Адміністрація
+                Адміністрування
             </a></li>
             <li id="nav-profile"><a href="/profile">
                 Мій профіль
@@ -148,6 +148,7 @@
                         <option value="STOREKEEPER">Комірник</option>
                         <option value="LEADER">Керівник</option>
                         <option value="ACCOUNTANT">Бухгалтер</option>
+                        <option value="DECLARANT">Декларант</option>
                     </select>
                 </div>
                 <button id="createUserBtn" class="btn-primary">Створити користувача</button>
