--- a/web-app/src/main/resources/templates/inventory.html
+++ b/web-app/src/main/resources/templates/inventory.html
@@ -85,7 +85,7 @@
                 Налаштування
             </a></li>
             <li id="nav-administration"><a href="/administration">
-                Адміністрація
+                Адміністрування
             </a></li>
             <li id="nav-profile"><a href="/profile">
                 Мій профіль
@@ -114,13 +114,13 @@
             <select id="operationAction" name="action" required>
                 <option value="deposit">Поповнити</option>
                 <option value="withdraw">Зняти</option>
-            </select><br><br>
+            </select>
 
             <label for="operationContainerType">Тип тари:</label>
-            <select id="operationContainerType" name="containerType" required></select><br><br>
+            <select id="operationContainerType" name="containerType" required></select>
 
             <label for="operationQuantity">Кількість:</label>
-            <input type="number" id="operationQuantity" name="quantity" required min="1" step="1"><br><br>
+            <input type="number" id="operationQuantity" name="quantity" required min="1" step="1">
 
             <input type="hidden" id="operationUserId" name="userId">
             <button type="submit">Виконати</button>
