--- a/web-app/src/main/resources/templates/containers.html
+++ b/web-app/src/main/resources/templates/containers.html
@@ -84,7 +84,7 @@
                 Налаштування
             </a></li>
             <li id="nav-administration"><a href="/administration">
-                Адміністрація
+                Адміністрування
             </a></li>
             <li id="nav-profile"><a href="/profile">
                 Мій профіль
