--- a/web-app/src/main/resources/templates/declarant.html
+++ b/web-app/src/main/resources/templates/declarant.html
@@ -83,7 +83,7 @@
                 Налаштування
             </a></li>
             <li id="nav-administration"><a href="/administration">
-                Адміністрація
+                Адміністрування
             </a></li>
             <li id="nav-profile"><a href="/profile">
                 Мій профіль
