--- a/web-app/src/main/resources/templates/finance.html
+++ b/web-app/src/main/resources/templates/finance.html
@@ -33,7 +33,7 @@
     <nav>
         <ul>
             <li id="nav-clients" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Клієнти
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -41,7 +41,7 @@
                 </ul>
             </li>
             <li id="nav-routes" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Маршрути
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -49,7 +49,7 @@
                 </ul>
             </li>
             <li id="nav-purchase" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Закупівлі
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -57,7 +57,7 @@
                 </ul>
             </li>
             <li id="nav-containers" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Тари
                     <span class="dropdown-arrow">▼</span>
                 </a>
