--- a/web-app/src/main/resources/templates/inventory.html
+++ b/web-app/src/main/resources/templates/inventory.html
@@ -35,7 +35,7 @@
     <nav>
         <ul>
             <li id="nav-clients" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Клієнти
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -43,7 +43,7 @@
                 </ul>
             </li>
             <li id="nav-routes" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Маршрути
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -51,7 +51,7 @@
                 </ul>
             </li>
             <li id="nav-purchase" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Закупівлі
                     <span class="dropdown-arrow">▼</span>
                 </a>
@@ -59,7 +59,7 @@
                 </ul>
             </li>
             <li id="nav-containers" class="dropdown">
-                <a href="#" onclick="return false;">
+                <a href="#">
                     Тари
                     <span class="dropdown-arrow">▼</span>
                 </a>
